- WIP reverseproxy + certbot - Updated todo list

--- a/wksp/timehammer/src/main/resources/application.yaml
+++ b/wksp/timehammer/src/main/resources/application.yaml
@@ -72,7 +72,7 @@ camel:
 
 # custom properties
 timehammer:
-  baseUrl: https://timehammer.com
+  baseUrl: https://timehammer.kronostools.com
   admins:
     - DCV
   chatbot:
