--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   db:
     image: postgres:12.2-alpine
-    container_name: db
+    container_name: timehammer-db
     environment:
       POSTGRES_USER: timehammer
       POSTGRES_DB: timehammer
@@ -14,7 +14,7 @@ services:
       - timehammer
   kv:
     image: vault:1.4.0
-    container_name: kv
+    container_name: timehammer-kv
     environment:
       VAULT_DEV_ROOT_TOKEN_ID: myroot
       VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
@@ -26,24 +26,48 @@ services:
     networks:
       - timehammer
   reverseproxy:
-    image: nginx:1.17.10-alpine
+    build:
+      context: ./wksp/reverseproxy/docker
+      dockerfile: Dockerfile
+      args:
+        TIMEHAMMER_HOST: timehammer.kronostools.com
+        TIMEHAMMER_HTTP_PORT: 8080
+        TIMEHAMMER_HTTPS_PORT: 8443
+        TIMEHAMMER_SERVICE_NAME: timehammerdev
+        TIMEHAMMER_SERVICE_PORT: 8080
+    image: timehammer-reverseproxy:1.0.0
+    container_name: timehammer-reverseproxy
+    depends_on:
+      - certbot
     ports:
-      - 8080:80
-      - 8443:443
-      volumes:
-        - ./data/nginx:/etc/nginx/conf.d
+      - 8080:8080
+      - 8443:8443
+    volumes:
+      - certchallenge:/var/www/certbot
+      - certfiles:/etc/letsencrypt
+    networks:
+      - timehammer
+  certbot:
+    build:
+      context: ./wksp/certbot/docker
+      dockerfile: Dockerfile
+    image: timehammer-certbot:1.0.0
+    container_name: timehammer-certbot
+    environment:
+      TIMEHAMMER_HOST: timehammer.kronostools.com
+    volumes:
+      - certchallenge:/var/www/certbot
+      - certfiles:/etc/letsencrypt
   timehammerdev:
     image: maven:3.6.3-jdk-11-slim
     container_name: timehammerdev
     env_file:
       - .env
     volumes:
-      - ./wksp:/root/wksp/timehammer
+      - ./wksp/timehammer:/root/wksp/timehammer
       - ${USERPROFILE}/.m2/repository:/root/.m2/repository
     working_dir: /root/wksp/timehammer
-    command: /bin/bash
-    stdin_open: true
-    tty: true
+    command: mvn -Dquarkus.profile=localdemo quarkus:dev
     ports:
       - 9000:8080
       - 6000:5005
@@ -53,7 +77,7 @@ services:
     image: quay.io/quarkus/centos-quarkus-maven:20.0.0-java8
     container_name: timehammernativebuild
     volumes:
-      - ./wksp:/project/timehammer
+      - ./wksp/timehammer:/project/timehammer
     working_dir: /project/timehammer
     command: /bin/bash
     stdin_open: true
@@ -62,7 +86,7 @@ services:
       - timehammer
   timehammernative:
     build:
-      context: ./wksp
+      context: ./wksp/timehammer
       dockerfile: ./src/main/docker/Dockerfile.native.tiny
     image: timehammer-native:1.0.0
     container_name: timehammernative
@@ -73,6 +97,8 @@ services:
 
 volumes:
   dbdata:
+  certchallenge:
+  certfiles:
 
 networks:
   timehammer:
