--- a/wksp/timehammer/src/main/docker/Dockerfile.jvm
+++ b/wksp/timehammer/src/main/docker/Dockerfile.jvm
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.jvm -t quarkus/ssidtracking-jvm .
+# docker build -f src/main/docker/Dockerfile.jvm -t quarkus/timehammer-jvm .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/ssidtracking-jvm
+# docker run -i --rm -p 8080:8080 quarkus/timehammer-jvm
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.1
