- WIP replacing certbot+nginx with linuxserver/letsencrypt - WIP reorganizing docker-compose to simplify execution in remote server

--- a/wksp/timehammer/src/main/resources/application.yaml
+++ b/wksp/timehammer/src/main/resources/application.yaml
@@ -106,13 +106,31 @@ timehammer:
       ## Clean SSID tracking events -> At 00:05:00am UTC, every day between Monday and Friday, every month
       cron: 0 5 0 ? * MON-FRI *
 
-"%dev":
-  timehammer:
-    baseUrl: http://192.168.86.168:9000
-
 "%localdemo":
   timehammer:
     baseUrl: http://192.168.86.168:9000
+    mocks:
+      comunytekClientMocked: true
+      timeMachineServiceMocked: true
+    schedules:
+      updateWorkersStatus:
+        enabled: false
+  quarkus:
+    # caches
+    cache:
+      caffeine:
+        comunytek-session-cache:
+          expire-after-write: 10s
+        comunytek-status-cache:
+          expire-after-write: 10s
+        worker-preferences-cache:
+          expire-after-write: 10s
+        worker-holidays-cache:
+          expire-after-write: 10s
+
+"%remotedemo":
+  timehammer:
+    baseUrl: https://timehammer.kronostools.com
     mocks:
       comunytekClientMocked: true
       timeMachineServiceMocked: true
