--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - dbdata:/var/lib/postgresql/data
     networks:
       - timehammer
+    restart: unless-stopped
   kv:
     image: vault:1.4.0
     container_name: timehammer-kv
@@ -19,60 +20,81 @@ services:
       VAULT_DEV_ROOT_TOKEN_ID: myroot
       VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
       VAULT_ADDR: http://0.0.0.0:8200
-    ports:
-      - 8200:8200
     cap_add:
       - IPC_LOCK
     networks:
       - timehammer
+    restart: unless-stopped
   reverseproxy:
-    build:
-      context: ./wksp/reverseproxy/docker
-      dockerfile: Dockerfile
-      args:
-        TIMEHAMMER_HOST: timehammer.kronostools.com
-        TIMEHAMMER_HTTP_PORT: 8080
-        TIMEHAMMER_HTTPS_PORT: 8443
-        TIMEHAMMER_SERVICE_NAME: timehammerdev
-        TIMEHAMMER_SERVICE_PORT: 8080
-    image: timehammer-reverseproxy:1.0.0
+    image: linuxserver/letsencrypt:1.3.0-ls109
     container_name: timehammer-reverseproxy
-    depends_on:
-      - certbot
-    ports:
-      - 8080:8080
-      - 8443:8443
+    environment:
+      PUID: 0
+      PGID: 0
+      TZ: UTC
+      URL: kronostools.com
+      SUBDOMAINS: timehammer,
+      VALIDATION: http
+      EMAIL: admin@kronostools.com
+      DHLEVEL: 2048
+      ONLY_SUBDOMAINS: "true"
+      STAGING: "false"
     volumes:
-      - certchallenge:/var/www/certbot
-      - certfiles:/etc/letsencrypt
+      - ./wksp/reverseproxy/config:/config
+    ports:
+      - 80:80
+      - 443:443
+    cap_add:
+      - NET_ADMIN
     networks:
       - timehammer
-  certbot:
-    build:
-      context: ./wksp/certbot/docker
-      dockerfile: Dockerfile
-    image: timehammer-certbot:1.0.0
-    container_name: timehammer-certbot
-    environment:
-      TIMEHAMMER_HOST: timehammer.kronostools.com
-    volumes:
-      - certchallenge:/var/www/certbot
-      - certfiles:/etc/letsencrypt
-  timehammerdev:
+    restart: unless-stopped
+#  reverseproxyold:
+#    build:
+#      context: ./wksp/reverseproxy/docker
+#      dockerfile: Dockerfile
+#      args:
+#        TIMEHAMMER_HOST: timehammer.kronostools.com
+#        TIMEHAMMER_HTTP_PORT: 8080
+#        TIMEHAMMER_HTTPS_PORT: 8443
+#        TIMEHAMMER_SERVICE_NAME: timehammerdev
+#        TIMEHAMMER_SERVICE_PORT: 8080
+#    image: timehammer-reverseproxy:1.0.0
+#    container_name: timehammer-reverseproxy
+#    depends_on:
+#      - certbot
+#    ports:
+#      - 8080:8080
+#      - 8443:8443
+#    volumes:
+#      - certchallenge:/var/www/certbot
+#      - certfiles:/etc/letsencrypt
+#    networks:
+#      - timehammer
+#  certbot:
+#    build:
+#      context: ./wksp/certbot/docker
+#      dockerfile: Dockerfile
+#    image: timehammer-certbot:1.0.0
+#    container_name: timehammer-certbot
+#    environment:
+#      TIMEHAMMER_HOST: timehammer.kronostools.com
+#    volumes:
+#      - certchallenge:/var/www/certbot
+#      - certfiles:/etc/letsencrypt
+  timehammer:
     image: maven:3.6.3-jdk-11-slim
-    container_name: timehammerdev
+    container_name: timehammer
     env_file:
       - .env
     volumes:
       - ./wksp/timehammer:/root/wksp/timehammer
-      - ${USERPROFILE}/.m2/repository:/root/.m2/repository
+      - ./.m2/repository:/root/.m2/repository
     working_dir: /root/wksp/timehammer
-    command: mvn -Dquarkus.profile=localdemo quarkus:dev
-    ports:
-      - 9000:8080
-      - 6000:5005
+    command: mvn -Dquarkus.profile=remotedemo quarkus:dev
     networks:
       - timehammer
+    restart: unless-stopped
   timehammernativebuild:
     image: quay.io/quarkus/centos-quarkus-maven:20.0.0-java8
     container_name: timehammernativebuild
@@ -90,15 +112,13 @@ services:
       dockerfile: ./src/main/docker/Dockerfile.native.tiny
     image: timehammer-native:1.0.0
     container_name: timehammernative
-    ports:
-      - 9000:8080
     networks:
       - timehammer
 
 volumes:
   dbdata:
-  certchallenge:
-  certfiles:
+#  certchallenge:
+#  certfiles:
 
 networks:
   timehammer:
