--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
     image: linuxserver/letsencrypt:1.3.0-ls109
     container_name: timehammer-reverseproxy
     environment:
-      PUID: 0
-      PGID: 0
-      TZ: UTC
+      PUID: 1001 # timehammer
+      PGID: 1001 # timehammer
+      TZ: Etc/UTC
       URL: kronostools.com
       SUBDOMAINS: timehammer,
       VALIDATION: http
@@ -49,39 +49,6 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-#  reverseproxyold:
-#    build:
-#      context: ./wksp/reverseproxy/docker
-#      dockerfile: Dockerfile
-#      args:
-#        TIMEHAMMER_HOST: timehammer.kronostools.com
-#        TIMEHAMMER_HTTP_PORT: 8080
-#        TIMEHAMMER_HTTPS_PORT: 8443
-#        TIMEHAMMER_SERVICE_NAME: timehammerdev
-#        TIMEHAMMER_SERVICE_PORT: 8080
-#    image: timehammer-reverseproxy:1.0.0
-#    container_name: timehammer-reverseproxy
-#    depends_on:
-#      - certbot
-#    ports:
-#      - 8080:8080
-#      - 8443:8443
-#    volumes:
-#      - certchallenge:/var/www/certbot
-#      - certfiles:/etc/letsencrypt
-#    networks:
-#      - timehammer
-#  certbot:
-#    build:
-#      context: ./wksp/certbot/docker
-#      dockerfile: Dockerfile
-#    image: timehammer-certbot:1.0.0
-#    container_name: timehammer-certbot
-#    environment:
-#      TIMEHAMMER_HOST: timehammer.kronostools.com
-#    volumes:
-#      - certchallenge:/var/www/certbot
-#      - certfiles:/etc/letsencrypt
   timehammer:
     image: maven:3.6.3-jdk-11-slim
     container_name: timehammer
@@ -89,7 +56,7 @@ services:
       - .env
     volumes:
       - ./wksp/timehammer:/root/wksp/timehammer
-      - ./.m2/repository:/root/.m2/repository
+      - ${HOME}/.m2/repository:/root/.m2/repository
     working_dir: /root/wksp/timehammer
     command: mvn -Dquarkus.profile=remotedemo quarkus:dev
     networks:
@@ -117,8 +84,6 @@ services:
 
 volumes:
   dbdata:
-#  certchallenge:
-#  certfiles:
 
 networks:
   timehammer:
