--- a/wksp/timehammer/src/main/resources/application.yaml
+++ b/wksp/timehammer/src/main/resources/application.yaml
@@ -100,8 +100,13 @@ timehammer:
     updateWorkersHolidays:
       name: updateWorkersHolidays
       enabled: true
-      ## Update workers' holidays -> At 00:10:00am UTC, every day between Monday and Friday, every month
-      cron: 0 10 0 ? * MON-FRI *
+      ## Update workers' holidays -> At 03:20:00am UTC, every day between Monday and Friday, every month
+      cron: 0 20 3 ? * MON-FRI *
+    cleanPastWorkersHolidays:
+      name: cleanPastWorkersHolidays
+      enabled: true
+      ## Remove workers' past holidays -> At 03:10:00am UTC, on the 1st day, in January
+      cron: 0 10 3 1 JAN ? *
     cleanSsidTrackingEvents:
       name: cleanSsidTrackingEvents
       enabled: true
