--- a/wksp/timehammer/src/main/resources/application.yaml
+++ b/wksp/timehammer/src/main/resources/application.yaml
@@ -97,21 +97,26 @@ timehammer:
       start: "05:00"
       ## In UTC
       end: "19:00"
-    updateWorkersHolidays:
-      name: updateWorkersHolidays
-      enabled: true
-      ## Update workers' holidays -> At 03:20:00am UTC, every day between Monday and Friday, every month
-      cron: 0 20 3 ? * MON-FRI *
     cleanPastWorkersHolidays:
       name: cleanPastWorkersHolidays
       enabled: true
-      ## Remove workers' past holidays -> At 03:10:00am UTC, on the 1st day, in January
-      cron: 0 10 3 1 JAN ? *
+      ## Remove workers' past holidays -> At 03:00:00am UTC, on the 1st day, in January
+      cron: 0 0 3 1 JAN ? *
+    updateWorkersHolidays:
+      name: updateWorkersHolidays
+      enabled: true
+      ## Update workers' holidays -> At 03:10:00am UTC, every day between Monday and Friday, every month
+      cron: 0 10 3 ? * MON-FRI *
     cleanSsidTrackingEvents:
       name: cleanSsidTrackingEvents
       enabled: true
-      ## Clean SSID tracking events -> At 00:05:00am UTC, every day between Monday and Friday, every month
-      cron: 0 5 0 ? * MON-FRI *
+      ## Clean SSID tracking events -> At 03:20:00am UTC, every day between Monday and Friday, every month
+      cron: 0 20 3 ? * MON-FRI *
+    cleanTrashMessages:
+      name: cleanTrashMessages
+      enabled: true
+      ## Clean Trash Messages -> At 03:30:00am UTC, every day between Monday and Friday, every month
+      cron: 0 30 3 ? * MON-FRI *
 
 "%localdemo":
   timehammer:
