- WIP adding company to worker

--- a/wksp/timehammer/src/main/resources/application.yaml
+++ b/wksp/timehammer/src/main/resources/application.yaml
@@ -50,6 +50,8 @@ quarkus:
         expire-after-write: 8h
       city-holidays-cache:
         expire-after-write: 8h
+      company-list-cache:
+        expire-after-write: 8h
 
   # quarkus-camel
   camel:
