--- a/wksp/timehammer/src/main/resources/application.yaml
+++ b/wksp/timehammer/src/main/resources/application.yaml
@@ -30,6 +30,8 @@ quarkus:
     caffeine:
       city-list-cache:
         expire-after-write: 8h
+      city-by-code-cache:
+        expire-after-write: 8h
       comunytek-session-cache:
         expire-after-write: 10m
       comunytek-status-cache:
@@ -51,6 +53,8 @@ quarkus:
       city-holidays-cache:
         expire-after-write: 8h
       company-list-cache:
+        expire-after-write: 8h
+      company-by-code-cache:
         expire-after-write: 8h
 
   # quarkus-camel
