- added module scheduler with update worker holidays schedule

--- a/wksp/timehammer/base/pom.xml
+++ b/wksp/timehammer/base/pom.xml
@@ -40,7 +40,9 @@
   </dependencyManagement>
 
   <modules>
-    <module>../monolith</module>
+    <module>../common</module>
+    <module>../scheduler</module>
     <module>../integration</module>
+    <module>../monolith</module>
   </modules>
 </project>
