--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,42 +1,46 @@
 version: '3'
 services:
-  timehammerbase:
+  global:
     image: maven:3.6.3-jdk-11-slim
-    container_name: timehammer-base
+    container_name: timehammer-global
     volumes:
       - ./wksp/timehammer:/root/wksp/timehammer
       - ${USERPROFILE}/.m2/repository:/root/.m2/repository
     working_dir: /root/wksp/timehammer
-    command: /bin/bash
+    command: ["/bin/bash"]
     stdin_open: true
     tty: true
     networks:
       - timehammer
-  timehammercore:
+  monolith:
     volumes:
       - ${USERPROFILE}/.m2/repository:/root/.m2/repository
-    command: mvn -Dquarkus.profile=localdemo quarkus:dev
+    command: ["mvn", "-Dquarkus.profile=localdemo", "quarkus:dev"]
     ports:
       - 9000:8080
       - 6000:5005
-  timehammernativebuild:
+  monolithnativebuild:
     image: quay.io/quarkus/centos-quarkus-maven:20.0.0-java8
-    container_name: timehammernativebuild
+    container_name: timehammer-monolithnativebuild
     volumes:
       - ./wksp/timehammer:/project/timehammer
     working_dir: /project/timehammer
-    command: /bin/bash
+    command: ["/bin/bash"]
     stdin_open: true
     tty: true
     networks:
       - timehammer
-  timehammernative:
+  monolithnative:
     build:
       context: ./wksp/timehammer
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
+      dockerfile: ./monolith/src/main/docker/Dockerfile.native.tiny
     image: timehammer-native:1.0.0
     container_name: timehammernative
     ports:
       - 9000:8080
     networks:
       - timehammer
+  scheduler:
+    volumes:
+      - ${USERPROFILE}/.m2/repository:/root/.m2/repository
+    command: ["mvn", "-Dquarkus.profile=localdemo", "quarkus:dev"]
