--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,16 +37,52 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-  timehammercore:
+  zookeeper:
+    image: strimzi/kafka:0.17.0-kafka-2.4.0
+    container_name: timehammer-zookeeperkafka
+    command: ["sh", "-c", "bin/zookeeper-server-start.sh config/zookeeper.properties"]
+    environment:
+      LOG_DIR: /tmp/logs
+    networks:
+      - timehammer
+    restart: unless-stopped
+  kafka:
+    image: strimzi/kafka:0.17.0-kafka-2.4.0
+    container_name: timehammer-kafka
+    command: ["sh", "-c", "bin/kafka-server-start.sh config/server.properties --override listeners=$${KAFKA_LISTENERS} --override advertised.listeners=$${KAFKA_ADVERTISED_LISTENERS} --override zookeeper.connect=$${KAFKA_ZOOKEEPER_CONNECT}"]
+    depends_on:
+      - zookeeper
+    environment:
+      LOG_DIR: "/tmp/logs"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    networks:
+      - timehammer
+    restart: unless-stopped
+  monolith:
     image: maven:3.6.3-jdk-11-slim
-    container_name: timehammer-core
+    container_name: timehammer-monolith
     env_file:
       - .env
     volumes:
       - ./wksp/timehammer:/root/wksp/timehammer
       - ${HOME}/.m2/repository:/root/.m2/repository
-    working_dir: /root/wksp/timehammer/timehammer-core
-    command: mvn -Dquarkus.profile=remotedemo quarkus:dev
+    working_dir: /root/wksp/timehammer/monolith
+    command: ["mvn", "-Dquarkus.profile=remotedemo", "quarkus:dev"]
+    networks:
+      - timehammer
+    restart: unless-stopped
+  scheduler:
+    image: maven:3.6.3-jdk-11-slim
+    container_name: timehammer-scheduler
+    volumes:
+      - ./wksp/timehammer:/root/wksp/timehammer
+      - ${HOME}/.m2/repository:/root/.m2/repository
+    working_dir: /root/wksp/timehammer/scheduler
+    command: ["mvn", "-Dquarkus.profile=remotedemo", "quarkus:dev"]
+    depends_on:
+      - kafka
     networks:
       - timehammer
     restart: unless-stopped
