--- a/wksp/timehammer/scheduler/src/main/resources/application.yaml
+++ b/wksp/timehammer/scheduler/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ mp:
         connector: smallrye-kafka
         topic: holidays-update
         value:
-          serializer: org.apache.kafka.common.serialization.IntegerSerializer
+          serializer: io.quarkus.kafka.client.serialization.JsonbSerializer
 
 kafka:
   bootstrap:
