--- a/wksp/timehammer/common/pom.xml
+++ b/wksp/timehammer/common/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>quarkus-core</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>io.quarkus</groupId>
