--- a/wksp/timehammer/base/pom.xml
+++ b/wksp/timehammer/base/pom.xml
@@ -18,8 +18,8 @@
     <maven.compiler.target>11</maven.compiler.target>
 
     <quarkus-plugin.version>1.4.1.Final</quarkus-plugin.version>
-    <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
+    <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
     <quarkus.platform.version>1.4.1.Final</quarkus.platform.version>
 
     <camel.version>3.1.0</camel.version>
@@ -42,9 +42,22 @@
   <modules>
     <module>../auth</module>
     <module>../common</module>
+    <module>../extensions</module>
     <module>../core</module>
     <module>../integration</module>
     <module>../monolith</module>
     <module>../scheduler</module>
   </modules>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${compiler-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
