--- a/wksp/timehammer/common/pom.xml
+++ b/wksp/timehammer/common/pom.xml
@@ -24,18 +24,18 @@
 
     <!-- To be able to use ProfileManager to get current profile -->
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-core</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
