--- a/wksp/timehammer/integration/pom.xml
+++ b/wksp/timehammer/integration/pom.xml
@@ -16,12 +16,12 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -35,7 +35,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>io.quarkus</groupId>
+        <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus-plugin.version}</version>
         <executions>
