--- a/wksp/timehammer/monolith/pom.xml
+++ b/wksp/timehammer/monolith/pom.xml
@@ -16,47 +16,47 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-resteasy-jsonb</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-hibernate-orm</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-jdbc-postgresql</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-scheduler</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-rest-client</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-cache</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-vertx</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-resteasy-qute</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-hibernate-validator</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-config-yaml</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-smallrye-health</artifactId>
     </dependency>
     <!-- BEGIN Camel -->
@@ -256,7 +256,7 @@
     </dependency>
     <!-- END Camel -->
     <dependency>
-      <groupId>io.quarkus</groupId>
+      <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -270,7 +270,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>io.quarkus</groupId>
+        <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus-plugin.version}</version>
         <executions>
