--- a/wksp/timehammer/auth/pom.xml
+++ b/wksp/timehammer/auth/pom.xml
@@ -9,28 +9,15 @@
 
   <parent>
     <groupId>com.kronostools.timehammer</groupId>
-    <artifactId>timehammer-base</artifactId>
+    <artifactId>timehammer-servicebase</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../base</relativePath>
+    <relativePath>../servicebase</relativePath>
   </parent>
 
   <dependencies>
     <dependency>
-      <groupId>com.kronostools.timehammer</groupId>
-      <artifactId>timehammer-common</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>${quarkus.platform.group-id}</groupId>
-      <artifactId>quarkus-config-yaml</artifactId>
-    </dependency>
-    <dependency>
       <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>${quarkus.platform.group-id}</groupId>
-      <artifactId>quarkus-resteasy-jsonb</artifactId>
     </dependency>
     <dependency>
       <groupId>${quarkus.platform.group-id}</groupId>
