--- a/wksp/timehammer/extensions/banner-ext/deployment/pom.xml
+++ b/wksp/timehammer/extensions/banner-ext/deployment/pom.xml
@@ -19,6 +19,10 @@
             <groupId>${quarkus.platform.group-id}</groupId>
             <artifactId>quarkus-core-deployment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${quarkus.platform.group-id}</groupId>
+            <artifactId>quarkus-arc-deployment</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.kronostools.timehammer</groupId>
