- (WIP) event-driven architecture refactor - (WIP) externalize timemachine service and channel

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,3 +31,9 @@ services:
     command: ["mvn", "-Dquarkus.profile=localdemo", "quarkus:dev"]
     ports:
       - 6030:5005
+  integration:
+    volumes:
+      - ${USERPROFILE}/.m2/repository:/root/.m2/repository
+    command: ["mvn", "-Dquarkus.profile=localdemo", "quarkus:dev"]
+    ports:
+      - 6040:5005
