--- a/wksp/timehammer/common/pom.xml
+++ b/wksp/timehammer/common/pom.xml
@@ -44,6 +44,10 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>io.smallrye.config</groupId>
+          <artifactId>smallrye-config-source-yaml</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
