--- a/wksp/timehammer/common/src/main/resources/timehammer_timemachine.yaml
+++ b/wksp/timehammer/common/src/main/resources/timehammer_timemachine.yaml
@@ -1,7 +1,7 @@
 mp:
   messaging:
     incoming:
-      timemachine:
+      timemachine-in:
         connector: smallrye-kafka
         topic: timemachine
         value:
