--- a/wksp/timehammer/servicebase/pom.xml
+++ b/wksp/timehammer/servicebase/pom.xml
@@ -34,8 +34,10 @@
   <modules>
     <module>../auth</module>
     <module>../core</module>
+    <module>../comunytek</module>
     <module>../integration</module>
     <module>../monolith</module>
     <module>../scheduler</module>
+    <module>../web</module>
   </modules>
 </project>
