--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,6 +135,32 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+  comunytek:
+    image: maven:3.6.3-jdk-11-slim
+    container_name: timehammer-comunytek
+    volumes:
+      - ./wksp/timehammer:/root/wksp/timehammer
+      - ${HOME}/.m2/repository:/root/.m2/repository
+    working_dir: /root/wksp/timehammer/comunytek
+    command: ["mvn", "-Dquarkus.profile=remotedemo", "quarkus:dev"]
+    depends_on:
+      - kafka
+    networks:
+      - timehammer
+    restart: unless-stopped
+  web:
+    image: maven:3.6.3-jdk-11-slim
+    container_name: timehammer-web
+    volumes:
+      - ./wksp/timehammer:/root/wksp/timehammer
+      - ${HOME}/.m2/repository:/root/.m2/repository
+    working_dir: /root/wksp/timehammer/web
+    command: ["mvn", "-Dquarkus.profile=remotedemo", "quarkus:dev"]
+    depends_on:
+      - kafka
+    networks:
+      - timehammer
+    restart: unless-stopped
 
 volumes:
   dbdata:
