--- a/wksp/timehammer/comunytek/pom.xml
+++ b/wksp/timehammer/comunytek/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>timehammer-integration</artifactId>
+  <artifactId>timehammer-comunytek</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -15,6 +15,11 @@
   </parent>
 
   <dependencies>
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-junit5</artifactId>
