- (WIP) event-driven architecture refactor - (WIP) persisting holidays into db - changed from resteasy-jsonb to resteasy-jackson in order to be able to deserialize using Builders

--- a/wksp/timehammer/comunytek/src/main/resources/application.yaml
+++ b/wksp/timehammer/comunytek/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ mp:
         connector: smallrye-kafka
         topic: holidays-worker-update
         value:
-          serializer: io.quarkus.kafka.client.serialization.JsonbSerializer
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 
 timehammer:
   comunytek:
