--- a/wksp/timehammer/auth/src/main/resources/application.yaml
+++ b/wksp/timehammer/auth/src/main/resources/application.yaml
@@ -11,4 +11,4 @@ mp:
         connector: smallrye-kafka
         topic: holidays-worker-get
         value:
-          serializer: io.quarkus.kafka.client.serialization.JsonbSerializer
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
