--- a/wksp/timehammer/web/pom.xml
+++ b/wksp/timehammer/web/pom.xml
@@ -23,6 +23,10 @@
       <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-vertx-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>${quarkus.platform.group-id}</groupId>
+      <artifactId>quarkus-resteasy-jackson</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>${quarkus.platform.group-id}</groupId>
