--- a/wksp/timehammer/scheduler/pom.xml
+++ b/wksp/timehammer/scheduler/pom.xml
@@ -19,6 +19,10 @@
       <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-scheduler</artifactId>
     </dependency>
+    <dependency>
+      <groupId>${quarkus.platform.group-id}</groupId>
+      <artifactId>quarkus-cache</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>${quarkus.platform.group-id}</groupId>
