--- a/wksp/timehammer/web/src/main/resources/application.yaml
+++ b/wksp/timehammer/web/src/main/resources/application.yaml
@@ -1,5 +1,11 @@
 mp:
   messaging:
+    incoming:
+      schedule-summary:
+        connector: smallrye-kafka
+        topic: schedule-summary
+        value:
+          deserializer: com.kronostools.timehammer.common.messages.schedules.deserializers.BatchScheduleSummaryMessageJacksonDeserializer
     outgoing:
       timemachine-out:
         connector: smallrye-kafka
