- (WIP) event-driven architecture refactor - added module chatbot

--- a/wksp/timehammer/servicebase/pom.xml
+++ b/wksp/timehammer/servicebase/pom.xml
@@ -33,6 +33,7 @@
 
   <modules>
     <module>../auth</module>
+    <module>../chatbot</module>
     <module>../core</module>
     <module>../comunytek</module>
     <module>../integration</module>
