--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,21 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+  chatbot:
+    image: maven:3.6.3-jdk-11-slim
+    container_name: timehammer-chatbot
+    environment:
+      TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
+    volumes:
+      - ./wksp/timehammer:/root/wksp/timehammer
+      - ${HOME}/.m2/repository:/root/.m2/repository
+    working_dir: /root/wksp/timehammer/chatbot
+    command: ["mvn", "-Dquarkus.profile=remotedemo", "quarkus:dev"]
+    depends_on:
+      - kafka
+    networks:
+      - timehammer
+    restart: unless-stopped
   web:
     image: maven:3.6.3-jdk-11-slim
     container_name: timehammer-web
