- (WIP) event-driven architecture refactor - renamed chatbot module to telegramchatbot

--- a/wksp/timehammer/servicebase/pom.xml
+++ b/wksp/timehammer/servicebase/pom.xml
@@ -33,12 +33,12 @@
 
   <modules>
     <module>../auth</module>
-    <module>../chatbot</module>
     <module>../core</module>
     <module>../comunytek</module>
     <module>../integration</module>
     <module>../monolith</module>
     <module>../scheduler</module>
+    <module>../telegramchatbot</module>
     <module>../web</module>
   </modules>
 </project>
