- (WIP) event-driven architecture refactor - renamed chatbot to telegramchatbot

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -40,7 +40,7 @@ services:
     command: ["mvn", "-Dquarkus.profile=localdemo", "quarkus:dev"]
     ports:
       - 6050:5005
-  chatbot:
+  telegramchatbot:
     volumes:
       - ${USERPROFILE}/.m2/repository:/root/.m2/repository
     command: ["mvn", "-Dquarkus.profile=localdemo", "quarkus:dev"]
